--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>CHATGPT-LTP></h1>
+
+    <div class="bloco">
+    <input id="pergunta"
+     type="text"
+      placeholder="Procurando algo?"
+       name="pergunta" />
+    <button onclick="enviarPergunta()">Enviar</button> 
+    <svg 
+    </div>
+
     <script src="connectChat.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
