--- a/PROJETO-LTP/index.html
+++ b/PROJETO-LTP/index.html
@@ -10,6 +10,7 @@
     <h1>CHATGPT-LTP</h1>
 
     <div class="bloco">
+    <img src="cht.webp" width="35" height="40"/>
     <input id="pergunta"
      type="text"
       placeholder="Procurando algo?"
