--- a/PROJETO-LTP/index.html
+++ b/PROJETO-LTP/index.html
@@ -7,10 +7,11 @@
     <title>CHAT GPT</title>
 </head>
 <body>
+    <img src="./img/cht.webp" width="50" height="50"/>
     <h1>CHATGPT-LTP</h1>
 
     <div class="bloco">
-    <img src="cht.webp" width="35" height="40"/>
+  
     <input id="pergunta"
      type="text"
       placeholder="Procurando algo?"
