--- a/PROJETO-LTP/index.html
+++ b/PROJETO-LTP/index.html
@@ -7,6 +7,16 @@
     <title>CHAT GPT</title>
 </head>
 <body>
+  <div class="nav">
+    <ul>
+    <li><a href="default.asp">Home</a></li>
+    <li><a href="news.asp">News</a></li>
+    <li><a href="contact.asp">Contact</a></li>
+    <li><a href="about.asp">About</a></li>
+  </ul>
+
+</div>
+  
     <img src="./img/cht.webp" width="50" height="50"/>
     <h1>CHATGPT-LTP</h1>
 
