--- a/PROJETO-LTP/index.html
+++ b/PROJETO-LTP/index.html
@@ -4,19 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>CHAT GPT</title>
+    <title>ChatGPT</title>
 </head>
 <body>
-  <div class="nav">
-    <ul>
-    <li><a href="default.asp">Home</a></li>
-    <li><a href="news.asp">News</a></li>
-    <li><a href="contact.asp">Contact</a></li>
-    <li><a href="about.asp">About</a></li>
-  </ul>
 
-</div>
-  
+    <div class="bia">
     <img src="./img/cht.webp" width="50" height="50"/>
     <h1>CHATGPT-LTP</h1>
 
@@ -42,9 +34,7 @@
             <circle class="spinner_EUy1 spinner_HXuO" cx="7.50" cy="19.79" r="1"/>
             <circle class="spinner_EUy1 spinner_ZETM" cx="12" cy="21" r="1"/></g></svg>
     </div>
-    <div class="content">
-
-    </div>
+  </div>
      
     <script src="index.js"></script>
     <script src="connectChat.js"></script>
